* Replaced deprecated constructor call.